metadata-retriever/metadata/objects/Vehicle_Inspection__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Vehicle Inspections</relationshipLabel>
        <relationshipName>Vehicle_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Inspections</relationshipLabel>
        <relationshipName>Vehicle_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_inspection_Date__c</fullName>
        <label>Date of inspection (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_UFWT__c</fullName>
        <label>Description of UFWT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inspection_Dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection Dealership</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Inspections (Inspection Dealership)</relationshipLabel>
        <relationshipName>Vehicle_Inspections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KMS__c</fullName>
        <label>KMS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_Inspector__c</fullName>
        <label>Name of Inspector</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_of_UFWT__c</fullName>
        <label>Total $ of UFWT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <formula>TEXT(Vehicle__r.Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <formula>Vehicle__r.Car_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicle Inspections</relationshipLabel>
        <relationshipName>Vehicle_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vehicle Inspection</label>
    <nameField>
        <displayFormat>VI-{000000}</displayFormat>
        <label>Vehicle Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>